@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V01-00-12
+2017-09-21 Mikhail S. Dubrovin
+- Return cached constants (even default) directly from GenericCalibPars.constatns() 
+
 Tag: V01-00-11
 2017-09-19 Mikhail S. Dubrovin
 move method par_to_tsec from DCMethods to DCUtils.py where psana is imported
